plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
	id "application"
	id "org.sonarqube" version "5.1.0.4882"
}

group = 'ar.edu.unq'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

apply plugin : "java"

ext {
   javaMainClass = "ar.edu.unq.apc.ApcApplication"
}

application {
	mainClassName = javaMainClass
}


repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.data:spring-data-envers'
	implementation 'com.google.code.gson:gson:2.7'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	implementation 'org.passay:passay:1.6.2'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.1'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.1'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.1'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation group: 'com.h2database', name: 'h2', version: '1.3.148'
}

tasks.named('test') {
	useJUnitPlatform()
}

sonar {
  properties {
    property "sonar.projectKey", "ivanJoshua98_PDES-2024-APC"
    property "sonar.organization", "ivanjoshua98-1"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}